Bug 337463 - Slow click selection reaction in state diagram
Summary: Slow click selection reaction in state diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-15 12:12 UTC by Aaron Nottbeck
Modified: 2014-09-24 20:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.90
Sentry Crash Report:


Attachments
testcase (24.64 KB, application/x-uml)
2014-07-15 12:18 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Nottbeck 2014-07-15 12:12:35 UTC
Reproduce:
1. create new state diagram
2. insert some elements
3. click on one of them

Result:
It lasts up to one second before the selection markers appears
Comment 1 Ralf Habacker 2014-07-15 12:18:15 UTC
Created attachment 87738 [details]
testcase
Comment 2 Ralf Habacker 2014-07-15 12:59:21 UTC
Git commit 7f661fed65d5948e4de14981858241f63ea8e8de by Ralf Habacker.
Committed on 14/07/2014 at 15:05.
Pushed by habacker into branch 'KDE/4.13'.

Fix long widget diagram selection delay on state diagrams.

The delay is caused by a signal/slot loop emitted by
UMLScene:sigClearAllSelected() connected to UMLWidget/AssociationWidget.
Because widget (de)selection is now based on QGraphicsScene, this signal
and the related slots are obsolate and could be removed.
FIXED-IN:4.13.4

M  +0    -2    umbrello/umlscene.cpp
M  +0    -1    umbrello/umlscene.h
M  +0    -10   umbrello/widgets/associationwidget.cpp
M  +0    -1    umbrello/widgets/associationwidget.h
M  +0    -12   umbrello/widgets/umlwidget.cpp
M  +0    -1    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/7f661fed65d5948e4de14981858241f63ea8e8de
Comment 3 Ralf Habacker 2014-07-15 13:07:57 UTC
Git commit 47222fa9eb5dfcc0f3980f4dcd05bda8a7e35a1e by Ralf Habacker.
Committed on 14/07/2014 at 15:05.
Pushed by habacker into branch 'master'.

Fix long widget diagram selection delay on state diagrams.

The delay is caused by a signal/slot loop emitted by
UMLScene:sigClearAllSelected() connected to UMLWidget/AssociationWidget.
Because widget (de)selection is now based on QGraphicsScene, this signal
and the related slots are obsolate and could be removed.

M  +0    -2    umbrello/umlscene.cpp
M  +0    -1    umbrello/umlscene.h
M  +0    -10   umbrello/widgets/associationwidget.cpp
M  +0    -1    umbrello/widgets/associationwidget.h
M  +0    -12   umbrello/widgets/umlwidget.cpp
M  +0    -1    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/47222fa9eb5dfcc0f3980f4dcd05bda8a7e35a1e
Comment 4 Ralf Habacker 2014-07-15 13:21:04 UTC
Git commit c38f595099546136fe6722220c94e29d961c7a6d by Ralf Habacker.
Committed on 14/07/2014 at 15:05.
Pushed by habacker into branch 'KDE/4.14'.

Fix long widget diagram selection delay on state diagrams.

The delay is caused by a signal/slot loop emitted by
UMLScene:sigClearAllSelected() connected to UMLWidget/AssociationWidget.
Because widget (de)selection is now based on QGraphicsScene, this signal
and the related slots are obsolate and could be removed.

M  +0    -2    umbrello/umlscene.cpp
M  +0    -1    umbrello/umlscene.h
M  +0    -10   umbrello/widgets/associationwidget.cpp
M  +0    -1    umbrello/widgets/associationwidget.h
M  +0    -12   umbrello/widgets/umlwidget.cpp
M  +0    -1    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/c38f595099546136fe6722220c94e29d961c7a6d