Fix long widget diagram selection delay on state diagrams.

The delay is caused by a signal/slot loop emitted by
UMLScene:sigClearAllSelected() connected to UMLWidget/AssociationWidget.
Because widget (de)selection is now based on QGraphicsScene, this signal
and the related slots are obsolate and could be removed.

BUG:337463
FIXED-IN:4.13.4