umbrello/umlscene.cpp
@@ -1215,7 +1215,6 @@ void UMLScene::removeWidgetCmd(UMLWidget * o)
 
     o->cleanup();
     o->setSelectedFlag(false);
-    disconnect(this, SIGNAL(sigClearAllSelected()), o, SLOT(slotClearAllSelected()));
     disconnect(this, SIGNAL(sigFillColorChanged(Uml::ID::Type)), o, SLOT(slotFillColorChanged(Uml::ID::Type)));
     disconnect(this, SIGNAL(sigLineColorChanged(Uml::ID::Type)), o, SLOT(slotLineColorChanged(Uml::ID::Type)));
     disconnect(this, SIGNAL(sigTextColorChanged(Uml::ID::Type)), o, SLOT(slotTextColorChanged(Uml::ID::Type)));
@@ -1276,7 +1275,6 @@ UMLWidgetList UMLScene::selectedWidgets() const
 void UMLScene::clearSelected()
 {
     clearSelection();
-    emit sigClearAllSelected();
     //m_doc->enableCutCopy(false);
 }
 
