umbrello/widgets/associationwidget.cpp
@@ -95,8 +95,6 @@ AssociationWidget::AssociationWidget(UMLScene *scene)
     m_role[RoleType::A].changeability = Uml::Changeability::Changeable;
     m_role[RoleType::B].changeability = Uml::Changeability::Changeable;
 
-    connect(m_scene, SIGNAL(sigClearAllSelected()), this, SLOT(slotClearAllSelected()));
-
     setFlag(QGraphicsLineItem::ItemIsSelectable);
     setAcceptHoverEvents(true);
 }
@@ -3762,14 +3760,6 @@ bool AssociationWidget::onAssociation(const QPointF& point)
         }
     }
     return onAssocClassLine(point);
-}
-
-/**
- * Handles any signals that tells everyone not to be selected.
- */
-void AssociationWidget::slotClearAllSelected()
-{
-    setSelected(false);
 }
 
 /**
